--- a/ml-env-introduction/6.描述性统计量.ipynb
+++ b/ml-env-introduction/6.描述性统计量.ipynb
@@ -342,7 +342,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -361,6 +363,18 @@
     "\n",
     "plt.hist(df['sepal_length'], bins=30)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 家庭作业\n",
+    "分析`../data/tips.csv`文件：\n",
+    "1. 通过pandas库导入tips.csv文件；\n",
+    "2. 分析(打印)`tip`列的均值、方差以及标准差；\n",
+    "3. 绘制对应的直方图；\n",
+    "4. (可选)绘制对应的概率质量函数；"
    ]
   },
   {
