--- a/ml-env-introduction/3.numpy.ipynb
+++ b/ml-env-introduction/3.numpy.ipynb
@@ -1,11 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BMI指数（即身体质量指数，简称体质指数又称体重，英文为Body Mass Index，简称BMI），是用体重公斤数除以身高米数平方得出的数字，是目前国际上常用的衡量人体胖瘦程度以及是否健康的一个标准。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "TypeError",
@@ -20,11 +25,11 @@
     }
    ],
    "source": [
-    "height =[1, 2, 3, 4, 5]\n",
+    "height = [1, 2, 3, 4, 5]\n",
     "\n",
-    "width = [6, 7, 8, 9, 10]\n",
+    "weight = [6, 7, 8, 9, 10]\n",
     "\n",
-    "print(height/width**2)"
+    "print(height/weight**2)"
    ]
   },
   {
@@ -40,237 +45,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.         0.5        0.33333333 0.25       0.2       ]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "np_height = np.array(height)\n",
-    "np_width = np.array(width)\n",
-    "\n",
-    "bmi = np_height/np_height ** 2\n",
-    "\n",
-    "print(bmi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.3333333333333333\n",
-      "[1.         0.5        0.33333333]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(bmi[2])\n",
-    "\n",
-    "print(bmi[bmi > 0.3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[0.02777778 0.04081633 0.046875   0.04938272 0.05      ]\n",
       "<class 'numpy.ndarray'>\n"
      ]
     }
    ],
    "source": [
-    "# Create list baseball\n",
-    "baseball = [180, 215, 210, 210, 188, 176, 209, 200]\n",
-    "\n",
-    "# Import the numpy package as np\n",
     "import numpy as np\n",
     "\n",
-    "# Create a numpy array from baseball: np_baseball\n",
-    "np_baseball = np.array(baseball)\n",
+    "np_height = np.array([1, 2, 3, 4, 5])\n",
+    "np_weight = np.array([6, 7, 8, 9, 10])\n",
     "\n",
-    "# Print out type of np_baseball\n",
-    "print(type(np_baseball))"
+    "bmi = np_height/np_weight ** 2\n",
+    "\n",
+    "print(bmi)\n",
+    "print(type(bmi))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(8,)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np_baseball.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'numpy.ndarray'>\n",
-      "(4, 2)\n"
+      "mean: 10.0 10.0\n",
+      "variance: 52.0 2.5\n",
+      "std: 7.211102550927978 1.5811388300841898\n"
      ]
     }
    ],
    "source": [
-    "# Create baseball, a list of lists\n",
-    "baseball = [[180, 78.4],\n",
-    "            [215, 102.7],\n",
-    "            [210, 98.5],\n",
-    "            [188, 75.2]]\n",
-    "\n",
-    "# Import numpy\n",
+    "# 均值描述的是集中趋势，而方差反映的是离散程度\n",
     "import numpy as np\n",
     "\n",
-    "# Create a 2D numpy array from baseball: np_baseball\n",
-    "np_baseball = np.array(baseball)\n",
-    "\n",
-    "# Print out the type of np_baseball\n",
-    "print(type(np_baseball))\n",
-    "print(np_baseball.shape)"
+    "x = np.array([0, 8, 12, 20])\n",
+    "y = np.array([8, 9, 11, 12])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(150, 5)\n"
+      "mean: 10.0 10.0\n",
+      "variance: 52.0 2.5\n",
+      "std: 7.211102550927978 1.5811388300841898\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
+    "def variance(data):\n",
+    "    differences = data - np.mean(data)\n",
+    "    diff_sq = np.square(differences)\n",
+    "    variance = np.mean(diff_sq)\n",
+    "    return variance\n",
     "\n",
-    "df = pd.read_csv('../data/iris.csv')\n",
-    "np_iris = df.values\n",
-    "\n",
-    "print(np_iris.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[7.0 3.2 4.7 1.4 'versicolor']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(np_iris[50])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[5.1 3.5 1.4 0.2 'setosa']\n",
-      "[[5.8 4.0 1.2 0.2 'setosa']\n",
-      " [5.7 4.4 1.5 0.4 'setosa']\n",
-      " [5.4 3.9 1.3 0.4 'setosa']\n",
-      " [5.1 3.5 1.4 0.3 'setosa']\n",
-      " [5.7 3.8 1.7 0.3 'setosa']\n",
-      " [5.1 3.8 1.5 0.3 'setosa']\n",
-      " [5.4 3.4 1.7 0.2 'setosa']]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 打印第一行的所有列\n",
-    "print(np_iris[0, :])\n",
-    "\n",
-    "# 打印15~20行\n",
-    "print(np_iris[14:21, :])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.843333333333335\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 打印np_iris第一列的平均值\n",
-    "print(np.mean(np_iris[:,0]))"
+    "def std(data):\n",
+    "    return np.sqrt(variance(data))\n",
+    "    \n",
+    "print('mean:', np.mean(x), np.mean(y))\n",
+    "print('variance:', variance(x), variance(y))\n",
+    "print('std:', std(x), std(y))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -291,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
