--- a/ml-env-introduction/3.numpy.ipynb
+++ b/ml-env-introduction/3.numpy.ipynb
@@ -19,7 +19,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-1f1b5f25c332>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mwidth\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mheight\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mwidth\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-1-9931efcce35d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mweight\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mheight\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for ** or pow(): 'list' and 'int'"
      ]
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,9 @@
      "output_type": "stream",
      "text": [
       "[0.02777778 0.04081633 0.046875   0.04938272 0.05      ]\n",
-      "<class 'numpy.ndarray'>\n"
+      "<class 'numpy.ndarray'>\n",
+      "[ 7  9 11 13 15]\n",
+      "[ 2  4  6  8 10]\n"
      ]
     }
    ],
@@ -66,24 +68,18 @@
     "bmi = np_height/np_weight ** 2\n",
     "\n",
     "print(bmi)\n",
-    "print(type(bmi))"
+    "print(type(bmi))\n",
+    "\n",
+    "print(np_height + np_weight)\n",
+    "\n",
+    "print(2*np_height)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mean: 10.0 10.0\n",
-      "variance: 52.0 2.5\n",
-      "std: 7.211102550927978 1.5811388300841898\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 均值描述的是集中趋势，而方差反映的是离散程度\n",
     "import numpy as np\n",
@@ -94,16 +90,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean: 10.0 10.0\n",
-      "variance: 52.0 2.5\n",
-      "std: 7.211102550927978 1.5811388300841898\n"
+      "[ 0  8 12 20]\n",
+      "10.0\n",
+      "[-10.  -2.   2.  10.]\n",
+      "[100.   4.   4. 100.]\n",
+      "[ 8  9 11 12]\n",
+      "10.0\n",
+      "[-2. -1.  1.  2.]\n",
+      "[4. 1. 1. 4.]\n",
+      "variance: 52.0 2.5\n"
      ]
     }
    ],
@@ -117,9 +119,9 @@
     "def std(data):\n",
     "    return np.sqrt(variance(data))\n",
     "    \n",
-    "print('mean:', np.mean(x), np.mean(y))\n",
+    "#print('mean:', np.mean(x), np.mean(y))\n",
     "print('variance:', variance(x), variance(y))\n",
-    "print('std:', std(x), std(y))"
+    "#print('std:', std(x), std(y))"
    ]
   },
   {
